블로그 업데이트

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
     <div class="article-entry" itemprop="articleBody">
       
-        <p>최근 deesle를 개발하면서 또 replace + 정규식 떡칠을 하다 이건 아니다 싶어서 새로 Lexer 라이브러리들을 미친듯이 뒤져봣습니다.<br>그 결과로 다음과 같은 라이브러리들을 찾을 수 있었습니다.</p>
+        <p>최근 deesle를 개발하면서 또 replace + 정규식 떡칠을 하다 이건 아니다 싶어서 새로 Lexer 라이브러리들을 미친듯이 뒤져본 결과,<br>다음과 같은 라이브러리들을 찾아냈다.</p>
 <ul>
 <li><a href="https://github.com/rse/tokenizr" target="_blank" rel="external">tokenizr</a> (이름을 항상 까먹음)</li>
 <li><a href="https://github.com/elmasse/yalex" target="_blank" rel="external">yalex</a></li>
